chore: delete _all aggregation methods
